# us-stock-market-indexes

./: app.py  next.config.js  package.json  pyproject.toml  replit_zip_error_log.txt
.github/workflows/: deploy.yml
static/css/: style.css
static/data/: confidence_indices.csv
static/js/: main.js
templates/: index.html
